--- a/src/chapterappendix.tex
+++ b/src/chapterappendix.tex
@@ -9,10 +9,13 @@ y&=r\sin\phi\cr
 }$$
 Spherical coordinates (radial, zenith, azimuth) $(\rho,\theta,\phi)$:
 $$\eqalign{
-x&=\rho\cos\phi\sin\theta\cr
-y&=\rho\sin\phi\sin\theta\cr
+x&=\rho\sin\theta\cos\phi\cr
+y&=\rho\sin\theta\sin\phi\cr
 z&=\rho\cos\theta\cr
 }$$
+Note: this meaning of $(\theta,\phi)$ is mostly used in the USA and in many
+books. In Europe people usualy use different symbols, like 
+$(\phi,\theta)$, $(\vartheta,\varphi)$ and others.
 
 \section{Delta Function}
 
