--- a/src/chapterQED.tex
+++ b/src/chapterQED.tex
@@ -41,6 +41,8 @@ the Standard Model).
 The QED Lagrangian density is
 $$\L=\bar\psi(ic\gamma^\mu D_\mu-mc^2)\psi-{1\over4}F_{\mu\nu}F^{\mu\nu}$$
 where
+$$\psi=\left(\matrix{\psi_1\cr\psi_2\cr\psi_3\cr\psi_4\cr}\right) $$
+and
 $$D_\mu=\partial_\mu+ieA_\mu$$
 is the gauge covariant derivative and ($e$ is the elementary charge, which is
 $1$ in atomic units)
@@ -64,7 +66,12 @@ take $\psi$ as a wavefunction, that is, it is a classical 4-component field. It
 can be shown that this corresponds to taking three orders in the perturbation
 theory.
 
+The first component $A_0$ of the 4-potential is the electric potential, and
+because this is the potential that (as we show in a moment) is in the
+Schr\"odinger equation, we denote it by $V$:
 $$A_\mu=\left({V\over ec},A_1,A_2,A_3\right)$$
+So in the non-relativistic limit, the $V\over e$ corresponds to the electric
+potential.  We multiply the Dirac equation by $\gamma^0$ from left to get:
 $$0=\gamma^0(ic\gamma^\mu D_\mu-mc^2)\psi=
 \gamma^0(ic\gamma^0(\partial_0+i{V\over c})+ic\gamma^i
 (\partial_i+ieA_i)-mc^2)\psi=$$
@@ -72,25 +79,55 @@ $$=
 (ic\partial_0+ic\gamma^0\gamma^i\partial_i-\gamma^0mc^2-V
 -ce\gamma^0\gamma^iA_i)\psi
 $$
+and we make the following substitutions (it's just a formalism, nothing more):
 $\beta=\gamma^0$, $\alpha^i=\gamma^0\gamma^i$, $p_j=-i\partial_j$,
 $\partial_0={1\over c}{\partial\over\partial t}$
-$$ (ic\partial_0-c\alpha^i p_i-\beta mc^2-V-ce\alpha^iA_i)\psi=0 $$
-$$ i{\partial\psi\over\partial t}=(c\alpha^i(p_i+eA_i)+\beta mc^2+V)\psi $$
+to get
+$$(i{\partial\over\partial t}-c\alpha^i p_i-\beta
+mc^2-V-ce\alpha^iA_i)\psi=0\,.$$
+This, in most solid state physics texts, is usually written as
+$$ i{\partial\psi\over\partial t}=H\psi\,,$$
+where the Hamiltonian is given by
+$$ H=c\alpha^i(p_i+eA_i)+\beta mc^2+V\,.$$
 
+The right hand side of the Maxwell equations is the 4-current, so it's given
+by:
 $$j^\mu=c\bar\psi\gamma^\mu\psi$$
-
-$\psi=e^{-imt}\varphi$, ${\partial\over\partial t}e^{-imt}(\cdots)=
-e^{-imt}(-im+{\partial\over\partial t})(\cdots)$
-$$j^0=c\psi^\dagger\psi=c\varphi^\dagger\varphi$$
-$$j^i=c\psi^\dagger\alpha^i\psi=c\varphi^\dagger\alpha^i\varphi$$
-
+Now me make the substitution $\psi=e^{-imt}\varphi$, which states, that we
+separate the largest oscillations of the wavefunction and we get
+$$j^0=c\bar\psi\gamma^0\psi=c\psi^\dagger\psi=c\varphi^\dagger\varphi$$
+$$j^i=c\bar\psi\gamma^i\psi=c\psi^\dagger\alpha^i\psi=c\varphi^\dagger\alpha^i\varphi$$
+The Dirac equation implies the Klein-Gordon equation:
 $$(-ic\gamma^\mu D_\mu-mc^2)(ic\gamma^\nu D_\nu-mc^2)\psi=
-(c^2D^\mu D_\mu+m^2c^4)\psi=0$$
-$$D^\mu D_\mu=\partial^\mu\partial_\mu+ie(\partial^\mu
-A_\mu+2A^\mu\partial_\mu) -e^2A^\mu A_\mu$$
-$$D^\mu D_\mu=\partial^\mu\partial_\mu
-+ie\left({1\over c^2}{\partial V\over\partial t}+
-2{V\over c^2}{\partial\over\partial t}\right) -{e^2\over c^2}V^2$$
+(c^2\gamma^\mu\gamma^\nu D_\mu D_\mu+m^2c^4)\psi=
+$$
+$$
+=(c^2D^\mu D_\mu-ic^2[\gamma^\mu,\gamma^\nu]D_\mu D_\nu+m^2c^4)\psi=0$$
+Note however, the $\psi$ in the true Klein-Gordon equation is just a scalar,
+but here we get a 4-component spinor. Now:
+$$
+D_\mu D_\nu = (\partial_\mu+ieA_\mu)(\partial_\nu+ieA_\nu)=
+\partial_\mu\partial_\nu+ie(A_\mu\partial_\nu+A_\nu\partial_\mu+
+(\partial_\mu A_\nu))-e^2A_\mu A_\nu
+$$
+$$[D_\mu, D_\nu] = D_\mu D_\nu-D_\nu D_\mu=ie(\partial_\mu A_\nu)-
+ie(\partial_\nu A_\mu)$$
+We rewrite $D^\mu D_\mu$:
+$$D^\mu D_\mu=g^{\mu\nu}D_\mu D_\nu=
+\partial^\mu\partial_\mu+ie((\partial^\mu
+A_\mu)+2A^\mu\partial_\mu) -e^2A^\mu A_\mu=$$
+$$=\partial^\mu\partial_\mu+
+ie((\partial^0 A_0)+2A^0\partial_0+(\partial^i A_i)+2A^i\partial_i)
+-e^2(A^0A_0+A^i A_i)=$$
+$$=\partial^\mu\partial_\mu
++i{1\over c^2}{\partial V\over\partial t}+
+2i{V\over c^2}{\partial\over\partial t}
++ie(\partial^i A_i)+2ieA^i\partial_i
+ -{V^2\over c^2}-e^2A^iA_i$$
+
+We use the identity
+${\partial\over\partial t}\left(e^{-imt}f(t)\right)=
+e^{-imt}(-im+{\partial\over\partial t})f(t)$ to get:
 
 $$L=c^2\partial^\mu\psi^*\partial_\mu\psi-m^2c^4\psi^*\psi=
 {\partial\over\partial t}\psi^*{\partial\over\partial t}\psi
@@ -103,7 +140,9 @@ $$=2mc^2\left[{1\over2}i(\varphi^*{\partial\varphi\over\partial t}-
 {1\over2m}\partial^i\varphi^*\partial_i\varphi
 +{1\over2mc^2}{\partial\varphi^*\over\partial t}
 {\partial\varphi\over\partial t}\right]$$
-Neglecting the last term we get
+The constant factor $2mc^2$ in front of the Lagrangian is of course irrelevant,
+so we drop it and then we take the limit $c\to\infty$ (neglecting the last
+term) and we get
 $$L={1\over2}i(\varphi^*{\partial\varphi\over\partial t}-
 \varphi{\partial\varphi^*\over\partial t})-
 {1\over2m}\partial^i\varphi^*\partial_i\varphi
@@ -113,20 +152,87 @@ $$L=i\varphi^*{\partial\varphi\over\partial t}
 -{1\over 2m}\partial^i\varphi^*\partial_i
 \varphi$$
 The nonrelativistic limit can also be applied directly to the Klein-Gordon equation:
-$$0=(c^2D^\mu D_\mu+m^2c^4)\psi=
-(c^2\partial^0\partial_0-c^2\partial^i\partial_i+iec^2(\partial^\mu
-A_\mu+2A^\mu\partial_\mu) -e^2c^2A^\mu A_\mu+m^2c^4)e^{-imc^2t}\varphi=$$
-$$=e^{-imc^2t}((-imc^2+{\partial\over\partial t})^2-c^2\nabla^2
-+iec^2\partial^\mu A_\mu+2emcA^0+2iec A^0{\partial\over\partial
-t}+2iec^2A^i\partial_i-e^2c^2 A^\mu A_\mu
-+m^2c^4)\varphi=$$
+$$0=(c^2D^\mu D_\mu+m^2c^4)\psi=$$
+$$=\left(
+c^2\partial^\mu\partial_\mu
++i{\partial V\over\partial t}
++2iV{\partial\over\partial t}
++iec^2(\partial^i A_i)
++2iec^2A^i\partial_i
+-V^2
+-e^2c^2A^iA_i
++m^2c^4
+\right)e^{-imc^2t}\varphi=
+$$
+$$=\left(
+{\partial^2\over\partial t^2}
+-c^2\nabla^2
++2iV{\partial\over\partial t}
++i{\partial V\over\partial t}
++iec^2(\partial^i A_i)
++2iec^2A^i\partial_i
+-V^2
+-e^2c^2A^iA_i
++m^2c^4
+\right)e^{-imc^2t}\varphi=
+$$
+$$=e^{-imc^2t}\left(
+(-imc^2+{\partial\over\partial t})^2
+-c^2\nabla^2
++2iV(-imc^2+{\partial\over\partial t})
++i{\partial V\over\partial t}
++iec^2(\partial^i A_i)
++2iec^2A^i\partial_i
+-V^2+ \right.
+$$
+$$\left.
+-e^2c^2A^iA_i
++m^2c^4
+\right)\varphi=
+$$
+$$=e^{-imc^2t}\left(
+-2imc^2{\partial\over\partial t}+{\partial^2\over\partial t^2}
+-c^2\nabla^2
++2Vmc^2
++2iV{\partial\over\partial t}
++i{\partial V\over\partial t}
++iec^2(\partial^i A_i)
++2iec^2A^i\partial_i
+-V^2+ \right.
+$$
+$$\left.
+-e^2c^2A^iA_i
+\right)\varphi=
+$$
 $$=
--2mc^2e^{-imc^2t}\left(i{\partial\over\partial
-t}-{1\over2mc^2}{\partial^2\over\partial t^2}+{\nabla^2\over2m}
--eA^0+{e^2\over2mc^2}A^\mu A_\mu
--{ie\over2m}(\partial^\mu A\mu+2A^\mu\partial_\mu)
-\right)\varphi$$
-Neglecting the second time derivative, we again get the Schr\"odinger equation:
-$$i{\partial\over\partial t}\varphi=-{\nabla^2\over2 m}\varphi$$
-
-Zkontrolovat predposledni radek, jsou tam blbe ccka.
+-2mc^2 e^{-imc^2 t} \left(i{\partial\over\partial t}+{\nabla^2\over2m}-V
+-{1\over2mc^2}{\partial^2\over\partial t^2}-{i\over2mc^2}{\partial
+V\over\partial t}+{V^2\over2mc^2}-{iV\over mc^2}{\partial\over\partial
+t}+\right.$$
+$$\left.-{ie\over2m}\partial^i A_i-{ie\over
+m}A^i\partial_i+{e^2\over2m}A^iA_i\right)\varphi
+$$
+Taking the limit $c\to\infty$ we again recover the Schr\"odinger equation:
+$$i{\partial\over\partial t}\varphi=\left(-{\nabla^2\over2
+m}+V
++{ie\over2m}\partial^i A_i
++{ie\over m}A^i\partial_i
+-{e^2\over2m}A^iA_i
+\right)\varphi\,,$$
+we rewrite the right hand side a little bit:
+$$i{\partial\over\partial t}\varphi=\left({1\over2 m}
+(\partial^i\partial_i
++ie\partial^i A_i
++2ieA^i\partial_i
+-e^2A^iA_i
+)
++V
+\right)\varphi\,,$$
+$$i{\partial\over\partial t}\varphi=\left({1\over2 m}
+(\partial^i+ieA^i)(\partial_i+ieA_i)
++V
+\right)\varphi\,,$$
+And we get the usual form of the Schr\"odinger equation for the vector
+potential ${\bf A}=(A_1, A_2, A_3)$:
+$$i{\partial\over\partial t}\varphi=\left(-{(\nabla+ie{\bf A})^2\over2 m}
++V \right)\varphi\,.$$
