[svn] a cosmetic change

--- a/src/chapterQED.tex
+++ b/src/chapterQED.tex
@@ -30,7 +30,7 @@ less things.
 
 As you will see, this chapter is not long, so there really is no excuse of
 doing things differently (maybe in 1940s, but certainly not now when we have
-the Standard Model). 
+the QED). 
 
 
 
