[svn] added some more points

--- a/src/chapterQED.tex
+++ b/src/chapterQED.tex
@@ -32,7 +32,21 @@ As you will see, this chapter is not long, so there really is no excuse of
 doing things differently (maybe in 1940s, but certainly not now when we have
 the QED). 
 
-
+There is one argument to be made though. As you will see, we will not get any
+new equations by deriving everything from firt principles from QED. We
+sometimes get a deeper understanding, however, from the practical point of
+view, it is not necessary to do that. There are logical problems even in QED or
+the Standard Model and noone really knows what are the correct equations,
+because we simply don't have enough experiments. The higher the energy we go,
+let's say up to the QED, the more fundamental theory we get, however, also the
+less experiments we have and thus some logical steps are just plain hand
+waving, because there is a whole bunch of ways how to continue, so we chose the
+one which we like, or which is the mathematically simplest. Contrary, in the
+low energy regime, like the classic quantum mechanics, the equations are very
+well known and there is really no other option. On the other hand, the theory
+doesn't explain us "why". So deriving everything from QED answers the "why",
+but creates some more fundamental questions, but those needn't concern us,
+because for our energy scale, everything works very nice.
 
 \def\L{L}
 
