[svn] Fix some missing c^2 updated README with installation instructions for texlive

--- a/src/chapterQED.tex
+++ b/src/chapterQED.tex
@@ -107,7 +107,7 @@ $$ H=c\alpha^i(p_i+eA_i)+\beta mc^2+V\,.$$
 The right hand side of the Maxwell equations is the 4-current, so it's given
 by:
 $$j^\mu=c\bar\psi\gamma^\mu\psi$$
-Now me make the substitution $\psi=e^{-imt}\varphi$, which states, that we
+Now we make the substitution $\psi=e^{-imc^2t}\varphi$, which states, that we
 separate the largest oscillations of the wavefunction and we get
 $$j^0=c\bar\psi\gamma^0\psi=c\psi^\dagger\psi=c\varphi^\dagger\varphi$$
 $$j^i=c\bar\psi\gamma^i\psi=c\psi^\dagger\alpha^i\psi=c\varphi^\dagger\alpha^i\varphi$$
@@ -140,8 +140,8 @@ $$=\partial^\mu\partial_\mu
  -{V^2\over c^2}-e^2A^iA_i$$
 
 We use the identity
-${\partial\over\partial t}\left(e^{-imt}f(t)\right)=
-e^{-imt}(-im+{\partial\over\partial t})f(t)$ to get:
+${\partial\over\partial t}\left(e^{-imc^2t}f(t)\right)=
+e^{-imc^2t}(-imc^2+{\partial\over\partial t})f(t)$ to get:
 
 $$L=c^2\partial^\mu\psi^*\partial_\mu\psi-m^2c^4\psi^*\psi=
 {\partial\over\partial t}\psi^*{\partial\over\partial t}\psi
