--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Compilation
 ===========
 
-wajig install texlive
+wajig install texlive texlive-lang-czechslovak texlive-formats-extra texlive-generic-recommended texlive-fonts-extra
 
 ./make
 
