[svn] fix a typo

--- a/src/chapterpseudo.tex
+++ b/src/chapterpseudo.tex
@@ -87,7 +87,7 @@ $$V_l(\rho,\rho')
 =\bra{lm}\braket{\rho|\hat V|\rho'}\ket{lm}
 =V(\rho)\braket{\rho|\rho'}
 =V(\rho){\delta(\rho-\rho')\over\rho^2}$$
-so it turned out that the kernel is local doesn't depend on $l$ and we get
+so it turned out that the kernel is local and doesn't depend on $l$ and we get
 $$V({\bf r}(\rho,\theta,\phi), {\bf r'}(\rho',\theta',\phi'))=
 \sum_{lm}Y_{lm}(\theta,\phi) V(\rho){\delta(\rho-\rho')\over\rho^2} Y_{lm}^*(\theta',\phi')=
 $$
