typo corrected: series -> sequence

--- a/src/chapterappendix.tex
+++ b/src/chapterappendix.tex
@@ -195,7 +195,7 @@ $$=\left.\int3(f(x)+\varepsilon\delta(x-t))^2\delta(x-t)\d x
 Some mathematicians would say the above calculation is incorrect, because
 $\delta^2(x-t)$ is undefined. But that's not true, because in case of such
 problems the above notation
-automatically implies working with some series $\delta_\alpha(x) \to \delta(x)$
+automatically implies working with some sequence $\delta_\alpha(x) \to \delta(x)$
 (for example $\delta_\alpha(x) = {1\over\pi x}\sin(\alpha x)$)
 and taking the limit $\alpha\to\infty$:
 $${\delta\over\delta f(t)}\int f^3(x)\d x=
