Sections about the Dirac equation added, bachelor thesis citation added.

--- a/src/books.bib
+++ b/src/books.bib
@@ -206,3 +206,10 @@
     YEAR="2006",
     NOTE="\url{http://en.wikipedia.org/wiki/Density\_functional\_theory}"
 }
+
+@MISC{bachelor-thesis,
+      author = {Ondrej Certik},
+      title = {Numerical solution of the radial Dirac equation in pseudopotential   construction},
+      note = "arXiv:0710.3408 [physics.atom-ph]"
+      year = {2007}
+}
