--- a/README
+++ b/README
@@ -3,6 +3,6 @@ Compilation
 
 wajig install texlive texlive-lang-czechslovak texlive-formats-extra texlive-generic-recommended texlive-fonts-extra
 
-./make
+$ make
 
-this will create a "dft.ps" in this directory.
+this will create a "master.pdf" in this directory.
