make it compile

--- a/master.tex
+++ b/master.tex
@@ -1,23 +1,10 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%                                    %%%
-%%% Šablona bakalářské práce na MFF UK %%%
-%%%                                    %%%
-%%% (c) František Štrupl, 2005         %%%
-%%%                                    %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%% POZOR: Úprava bakalářské práce je závislá rovněž na volbě jednostranného resp. oboustranného tisku.
-%%%        Bližši informace naleznete v dokumentu Úprava bakalářské práce, který se nalézá na adrese:
-%%%        http://www.mff.cuni.cz/studium/obecne/bplayout/pok12mo4.pdf
-
 \documentclass[12pt,notitlepage]{report}
 %\pagestyle{headings}
 \pagestyle{plain}
 
 \frenchspacing % aktivuje použití některých českých typografických pravidel
 
-\usepackage[latin2]{inputenc} % nastavuje použité kódování, uživatelé Windows zamění latin2 za cp1250
-\usepackage{czech}
+\usepackage[utf8]{inputenc} % nastavuje použité kódování, uživatelé Windows zamění latin2 za cp1250
 \usepackage{a4wide} % nastavuje standardní evropský formát stránek A4
 %\usepackage{index} % nutno použít v případě tvorby rejstříku balíčkem makeindex
 %\usepackage{fancybox} % umožňuje pokročilé rámečkování :-)
@@ -58,7 +45,7 @@ Matematicko-fyzikální fakulta\\
 %%% Aby vložní loga vše správně fungovalo, je třeba mít soubor logo.eps nahraný v pracovním adresáři,
 %%% tj. v adresáři, kde se nachází překládaný zdrojový soubor. Soubor logo.eps je možné získat např.
 %%% na adrese: http://www.mff.cuni.cz/fakulta/symboly/logo.eps
-\includegraphics[scale=0.3]{logo.eps} 
+%\includegraphics[scale=0.3]{logo.eps} 
 
 \vspace{15mm}
 
