--- a/master.tex
+++ b/master.tex
@@ -21,9 +21,6 @@
 
 \begin{document}
 
-%\csprimeson % zapne jednoduché psaní českých uvozovek pomocí klasických znaků, ale potom pozor 
-             % na originální apostrofy, které budou chybně interpretovány!!!
-
 %%% Následuje první, úvodní, strana bakalářské práce. Jednotlivé položky nahraďte dle vlastních
 %%% údajů. Změnit podle konkrétní délky jednotlivých položek můžete i zalomení řádků.
 \begin{titlepage}
@@ -33,36 +30,33 @@
 \vspace{15mm}
 
 \large
-Univerzita Karlova v Praze\\
-Matematicko-fyzikální fakulta\\
+Charles University in Prague\\
+Faculty of Mathematics and Physics\\
 
 \vspace{5mm}
 
-{\Large\bf BAKALÁŘSKÁ PRÁCE}
+{\Large\bf MASTER THESIS}
 
 \vspace{10mm}
 
-%%% Aby vložní loga vše správně fungovalo, je třeba mít soubor logo.eps nahraný v pracovním adresáři,
-%%% tj. v adresáři, kde se nachází překládaný zdrojový soubor. Soubor logo.eps je možné získat např.
-%%% na adrese: http://www.mff.cuni.cz/fakulta/symboly/logo.eps
-%\includegraphics[scale=0.3]{logo.eps} 
+\includegraphics[scale=0.3]{logo.eps}
 
 \vspace{15mm}
 
 %\normalsize
-{\Large Jméno autora}\\ % doplňte vaše jméno
+{\Large Ondřej Čertík}\\ 
 \vspace{5mm}
-{\Large\bf Název práce (přesně podle zadání)}\\ % doplňte název práce
+{\Large\bf Calculation of electron structure in the framework of DTF in real
+space}\\
 \vspace{5mm}
-Název katedry či ústavu\\ % doplňte název katedry či ústavu
+Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 \end{center}
 \vspace{15mm}
 
 \large
-\noindent Vedoucí bakalářské práce: Jméno se všemi tituly a pracoviště, % doplňte odpovídající údaje
-%%% další řádek můžete ve většině případů (tj. pokud údaje uvedené výše nejsou příliš dlouhé) zrušit
-\hskip20mm   je-li odlišné od uvedeného názvu katedry či ústavu 
-\vspace{1mm} 
+\noindent Supervisor: RNDr. Jiří Vackář, CSc. Institute of Physics,
+\hskip20mm   Academy of Sciences, Czech Republic
+\vspace{1mm}
 
 \noindent Studijní program: název studijního programu, název studijního % doplňte odpovídající údaje
 %%% další řádek můžete ve většině případů (tj. pokud údaje uvedené výše nejsou příliš dlouhé) zrušit
