--- a/master.tex
+++ b/master.tex
@@ -46,7 +46,7 @@ Faculty of Mathematics and Physics\\
 %\normalsize
 {\Large Ondřej Čertík}\\ 
 \vspace{5mm}
-{\Large\bf Calculation of electron structure in the framework of DTF in real
+{\Large\bf Calculation of electron structure in the framework of DFT in real
 space}\\
 \vspace{5mm}
 Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
@@ -54,21 +54,18 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 \vspace{15mm}
 
 \large
-\noindent Supervisor: RNDr. Jiří Vackář, CSc. Institute of Physics,
-\hskip20mm   Academy of Sciences, Czech Republic
-\vspace{1mm}
-
-\noindent Studijní program: název studijního programu, název studijního % doplňte odpovídající údaje
-%%% další řádek můžete ve většině případů (tj. pokud údaje uvedené výše nejsou příliš dlouhé) zrušit
-\hskip20mm oboru (směru),  příp. název studijního plánu
-
-\vspace{20mm}
-
+\noindent Supervisor: RNDr. Jiří Vackář, CSc. Institute of Physics, \\
+\hbox{$\quad\quad\quad\quad\quad$}   Academy of Sciences, Czech Republic
+\vspace{1mm}\\
+%
+\noindent Field of study: theoretical physics
+\bigskip
+\bigskip
 \begin{center}
-2006 % doplňte rok vzniku vaší bakalářské práce
+2008
 \end{center}
 
-\end{titlepage} % zde končí úvodní strana
+\end{titlepage}
 
 \normalsize % nastavení normální velikosti fontu
 \setcounter{page}{2} % nastavení číslování stránek
