--- a/master.tex
+++ b/master.tex
@@ -67,17 +67,23 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 
 \end{titlepage}
 
-\normalsize % nastavení normální velikosti fontu
-\setcounter{page}{2} % nastavení číslování stránek
-\ \vspace{10mm} 
+\normalsize
+\setcounter{page}{2}
+\ \vspace{10mm}
 
-\noindent Na tomto místě mohou být napsána případná poděkování (vedoucímu práce, konzultantovi, tomu, kdo půjčil software, literaturu, poskytl data apod.). % doplňte vlastní text
+\noindent I would like to thank RNDr. Jiří Vackář, CSc., for many discussions,
+enlightening a lot of issues in quantum mechanics to me and for his time
+helping me with this work. I thank to RNDr. Ondřej Šipr, CSc. for explaining
+me many theoretical problems and general advice. I very much thank Ing. Jiří
+Plešek, CSc. for moral support during my university years and during writing
+this thesis.
 
-\vspace{\fill} % nastavuje dynamické umístění následujícího textu do spodní části stránky
-\noindent Prohlašuji, že jsem svou bakalářskou práci napsal(a) samostatně a výhradně s použitím citovaných pramenů. Souhlasím se zapůjčováním práce a jejím zveřejňováním.
+\vspace{\fill}
+\noindent I declare that I wrote the thesis by myself and listed all used
+sources. I agree with making the thesis publicly available.
 
 \bigskip
-\noindent V Praze dne \hspace{\fill}Jméno Příjmení\\ % doplňte patřičné datum, jméno a příjmení
+\noindent Prague, August 5, 2008 \hspace{\fill}Ondřej Čertík\\ % doplňte patřičné datum, jméno a příjmení
 
 %%%   Výtisk pak na tomto míste nezapomeňte PODEPSAT!
 %%%                                         *********
