--- a/master.tex
+++ b/master.tex
@@ -94,28 +94,30 @@ sources. I agree with making the thesis publicly available.
 
 %%% Následuje strana s abstrakty. Doplňte vlastní údaje.
 \noindent
-Název práce: Název bakalářské práce\\
-Autor: Jméno autora\\
-Katedra (ústav): Název katedry či ústavu\\
-Vedoucí bakalářské práce: Jméno se všemi tituly, event. pracoviště\\
-e-mail vedoucího: e-mailová adresa vedoucího\\
+Title: Calculation of electron structure in the framework of DFT in real
+space\\
+Author: Ondřej Čertík\\
+Department: Institute of Theoretical Physics\\
+Supervisor: RNDr. Jiří Vackář, CSc.\\
+Supervisor's e-mail address: vackar@fzu.cz\\
 
-\noindent Abstrakt:  V předložené práci studujeme ... Uvede se abstrakt v rozsahu 80 až 200 slov. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Ut sit amet sem. Mauris nec turpis ac sem mollis pretium. Suspendisse neque massa, suscipit id, dictum in, porta at, quam. Nunc suscipit, pede vel elementum pretium, nisl urna sodales velit, sit amet auctor elit quam id tellus. Nullam sollicitudin. Donec hendrerit. Aliquam ac nibh. Vivamus mi. Sed felis. Proin pretium elit in neque. Pellentesque at turpis. Maecenas convallis. Vestibulum id lectus. Fusce dictum augue ut nibh. Etiam non urna nec mi mattis volutpat. Curabitur in tortor at magna nonummy gravida. Mauris turpis quam, volutpat quis, porttitor ut, condimentum sit amet, felis.\\
+\noindent Abstract: In the present work we study ... Uvede se anglický abstrakt v rozsahu 80 až 200 slov. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Ut sit amet sem. Mauris nec turpis ac sem mollis pretium. Suspendisse neque massa, suscipit id, dictum in, porta at, quam. Nunc suscipit, pede vel elementum pretium, nisl urna sodales velit, sit amet auctor elit quam id tellus. Nullam sollicitudin. Donec hendrerit. Aliquam ac nibh. Vivamus mi. Sed felis. Proin pretium elit in neque. Pellentesque at turpis. Maecenas convallis. Vestibulum id lectus. Fusce dictum augue ut nibh. Etiam non urna nec mi mattis volutpat. Curabitur in tortor at magna nonummy gravida. Mauris turpis quam, volutpat quis, porttitor ut, condimentum sit amet, felis. \\
 
-\noindent Klíčová slova: klíčová slova (3 až 5)
+\noindent Keywords: Finite element method, Density functional theory
 
 \vspace{10mm}
 
 \noindent
-Title: Název bakalářské práce v angličtině\\
-Author: Jméno autora\\
-Department: Název katedry či ústavu v angličtině\\
-Supervisor: Jméno s tituly jako v české verzi, event. pracoviště\\
-Supervisor's e-mail address: e-mailová adresa vedoucího\\
+Název práce: Vypočty elektronových struktur v rámci DFT v reálném prostoru\\
+Autor: Ondřej Čertík\\
+Katedra (ústav): Ústav teoretické fyziky\\
+Vedoucí bakalářské práce: RNDr. Jiří Vackář, CSc.\\
+e-mail vedoucího: vackar@fzu.cz\\
 
-\noindent Abstract: In the present work we study ... Uvede se anglický abstrakt v rozsahu 80 až 200 slov. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Ut sit amet sem. Mauris nec turpis ac sem mollis pretium. Suspendisse neque massa, suscipit id, dictum in, porta at, quam. Nunc suscipit, pede vel elementum pretium, nisl urna sodales velit, sit amet auctor elit quam id tellus. Nullam sollicitudin. Donec hendrerit. Aliquam ac nibh. Vivamus mi. Sed felis. Proin pretium elit in neque. Pellentesque at turpis. Maecenas convallis. Vestibulum id lectus. Fusce dictum augue ut nibh. Etiam non urna nec mi mattis volutpat. Curabitur in tortor at magna nonummy gravida. Mauris turpis quam, volutpat quis, porttitor ut, condimentum sit amet, felis. \\
+\noindent Abstrakt:  V předložené práci studujeme ... Uvede se abstrakt v rozsahu 80 až 200 slov. Lorem ipsum dolor sit amet, cod lectus. Fusce dictum augue ut nibh. Etiam non urna nec mi mattis volutpat. Curabitur in tortor at magna nonummy gravida. Mauris turpis quam, volutpat quis, porttitor ut, condimentum sit amet, felis.\\
 
-\noindent Keywords: klíčová slova (3 až 5) v angličtině
+\noindent Klíčová slova: metoda konečných prvků, teorie funkcionálu hustoty
+
 
 \newpage
 
