--- a/master.tex
+++ b/master.tex
@@ -88,7 +88,6 @@ sources. I agree with making the thesis publicly available.
 %%%   Výtisk pak na tomto míste nezapomeňte PODEPSAT!
 %%%                                         *********
 
-\tableofcontents % vkládá automaticky generovaný obsah dokumentu
 
 \newpage % přechod na novou stránku
 
@@ -118,23 +117,31 @@ e-mail vedoucího: vackar@fzu.cz\\
 
 \noindent Klíčová slova: metoda konečných prvků, teorie funkcionálu hustoty
 
+\tableofcontents % vkládá automaticky generovaný obsah dokumentu
 
 \newpage
 
-%%% Následuje text bakalářské práce členěný do kapitol, které se číslují, označí názvy a graficky oddělí.
-%%% Nedoporučuje se používat víc než dvě úrovně číslování kapitol, viz příklad níže.
+\chapter{Survey of the Current State}
 
-\chapter{Název první kapitoly}
+\section{Quantum Mechanics}
 
-\section{Název první podkapitoly v první kapitole}
+\chapter{Motivation, Tasks}
 
-\section{Název druhé podkapitoly v první kapitole}
+\section{Formulation of the Schr\"odinger Equation for Finite Element Method}
 
-\chapter{Název druhé kapitoly}
+\section{Density Functional Theory Formulation}
 
-\section{Název první podkapitoly v druhé kapitole}
+\chapter{Methods Used}
 
-\section{Název druhé podkapitoly v druhé kapitole}
+\section{Finite Element Method}
+
+\section{Density Functional Theory}
+
+\chapter{Results}
+
+\section{Solution of the Schr\"odinger Equation}
+
+\section{Density Functional Theory, Spherically Symmetric Solution}
 
 
 %%% Seznam literatury
