--- a/macros.tex
+++ b/macros.tex
@@ -1,8 +1,11 @@
 \def\degrees{^\circ}
 \def\d{{\rm d}}
 
-\def\L{L}
+\def\L{{\mathcal L}}
+\def\H{{\mathcal H}}
+\def\M{{\mathcal M}}
 \def\matrix{}
+\def\fslash#1{#1 \!\!\!/}
 \def\F{{\bf F}}
 \def\R{{\bf R}}
 \def\J{{\bf J}}
