--- a/master.tex
+++ b/master.tex
@@ -131,22 +131,15 @@ e-mail vedoucího: vackar@fzu.cz\\
 
 \chapter{Motivation, Tasks}
 
-\section{Formulation of the Schr\"odinger Equation for Finite Element Method}
-
-\section{Density Functional Theory Formulation}
+\input motivation.tex
 
 \chapter{Methods Used}
 
-\section{Finite Element Method}
-
-\section{Density Functional Theory}
+\input methods.tex
 
 \chapter{Results}
 
-\section{Solution of the Schr\"odinger Equation}
-
-\section{Density Functional Theory, Spherically Symmetric Solution}
-
+\input results.tex
 
 %%% Seznam literatury
 %%%
