--- a/master.tex
+++ b/master.tex
@@ -141,6 +141,10 @@ e-mail vedoucího: vackar@fzu.cz\\
 
 \input results.tex
 
+\chapter{Appendix}
+
+\input appendix.tex
+
 %%% Seznam literatury
 %%%
 %%% Literatura se řadí abecedně. Úvádí se pouze literatura, na kterou se v textu odkazuje.
