--- a/theory.tex
+++ b/theory.tex
@@ -1,4 +1,4 @@
-\section{Standard Model}
+\section{From Standard Model to Schr\"odinger Equation}
 
 \subsection{Electroweak Standard Model}
 
@@ -324,7 +324,7 @@ Example: what is the dimension of $G_\mu$ in $\L = -{G_\mu\over\sqrt2} [\bar \ps
 \end{equation*}
 More to be added here...
 
-\subsection{QFT}
+\subsection{Quantum Field Theory}
 
 \subsubsection{Evolution Operator, S-Matrix Elements}
 
@@ -624,7 +624,7 @@ where we used the fact, that the only nonzero element of the Green function is
   =\pm S(x_1-x) \gamma^\mu S(x_2-x)D_{\mu\nu}(x-y)S(y_1-y)\gamma^\nu S(y_2-y)
 \end{equation*}
 
-\subsection{Low energy theories}
+\subsection{Low Energy Theories}
 
 \subsubsection{Fermi-type theory}
 
@@ -654,7 +654,7 @@ with
 \end{equation*}
 This is the universal V-A theory Lagrangian (after adding the h.c. term).
 
-\section{QED}
+\subsection{Quantum Electrodynamics}
 
 The QED Lagrangian density is 
 \begin{equation*}
